--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,8 @@
 
 # Custom for Visual Studio
 *.cs     diff=csharp
-
+*.html linguist-language=C#
+*.css linguist-language = C#
 # Standard to msysgit
 *.doc	 diff=astextplain
 *.DOC	 diff=astextplain
